ref #842 update java dependencies + browser + gradle wrapper